<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DifficultyFragment">


    <RadioGroup
        android:id="@+id/radioGroupDifficultyRadioGroup"
        android:layout_width="409dp"
        android:layout_height="match_parent"
        android:layout_margin="32dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButtonEasyRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:checked="true"
            android:text="@string/easy_difficulty" />

        <RadioButton
            android:id="@+id/radioButtonNormalRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/normal_difficulty" />

        <RadioButton
            android:id="@+id/radioButtonHardRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/hard_difficulty" />


    </RadioGroup>

    <Button
        android:id="@+id/buttonPlayButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/play"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupDifficultyRadioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>