<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonLoginButton"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:alpha="0.75"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/textViewForgotPassword"
        app:layout_constraintStart_toStartOf="@+id/textViewForgotPassword"
        app:layout_constraintTop_toBottomOf="@+id/textViewForgotPassword" />

    <Button
        android:id="@+id/buttonRegisterButton"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:alpha="0.75"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/buttonLoginButton"
        app:layout_constraintStart_toStartOf="@+id/buttonLoginButton"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoginButton" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="username"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:text="@string/reset_password"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPassword"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>